--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,5 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
-, "app/_layout.jsx"  ]
+, "app/_layout.jsx", "app/(team)/VehicleData.jsx"  ]
 }
