--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "react-native-toast-notifications": "^3.4.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
-    "uglify-js": "^3.17.4"
+    "uglify-js": "^3.17.4",
+    "expo-dev-client": "~4.0.27",
+    "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
