--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.4.0",
     "axios": "^1.7.7",
-    "expo": "^51.0.36",
+    "expo": "~51.0.37",
     "expo-constants": "~16.0.2",
+    "expo-dev-client": "~4.0.28",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
@@ -44,9 +46,7 @@
     "react-native-toast-notifications": "^3.4.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
-    "uglify-js": "^3.17.4",
-    "expo-dev-client": "~4.0.27",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "uglify-js": "^3.17.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
