--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-native-toast-notifications": "^3.4.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
+    "react-native-webview": "13.8.6",
     "uglify-js": "^3.17.4"
   },
   "devDependencies": {
