--- a/package.json
+++ b/package.json
@@ -17,23 +17,26 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/cli-server-api": "^15.1.2",
     "@react-navigation/drawer": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
+    "@react-navigation/native-stack": "^7.0.0",
     "@react-navigation/stack": "^7.0.0",
     "axios": "^1.7.7",
-    "expo": "^52.0.10",
+    "expo": "^52.0.0",
     "expo-constants": "~17.0.3",
     "expo-dev-client": "~5.0.4",
     "expo-font": "~13.0.1",
     "expo-linking": "~7.0.3",
-    "expo-router": "~4.0.8",
+    "expo-router": "^4.0.9",
     "expo-splash-screen": "~0.29.13",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.3",
     "expo-web-browser": "~14.0.1",
+    "fix": "^0.0.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.2",
+    "react-native": "0.76.3",
     "react-native-bouncy-checkbox": "^4.0.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-maps": "1.18.0",
@@ -47,6 +50,7 @@
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.2",
+    "react-router-native": "^6.28.0",
     "uglify-js": "^3.17.4"
   },
   "devDependencies": {
