--- a/package.json
+++ b/package.json
@@ -23,15 +23,15 @@
     "@react-navigation/native-stack": "^7.0.0",
     "@react-navigation/stack": "^7.0.0",
     "axios": "^1.7.7",
-    "expo": "^52.0.0",
+    "expo": "~52.0.17",
     "expo-constants": "~17.0.3",
-    "expo-dev-client": "~5.0.4",
+    "expo-dev-client": "~5.0.5",
     "expo-font": "~13.0.1",
     "expo-linking": "~7.0.3",
-    "expo-router": "^4.0.9",
-    "expo-splash-screen": "~0.29.13",
+    "expo-router": "~4.0.11",
+    "expo-splash-screen": "~0.29.16",
     "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "~4.0.3",
+    "expo-system-ui": "~4.0.5",
     "expo-web-browser": "~14.0.1",
     "fix": "^0.0.3",
     "react": "18.3.1",
@@ -49,7 +49,7 @@
     "react-native-toast-notifications": "^3.4.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.2",
+    "react-native-webview": "13.12.5",
     "react-router-native": "^6.28.0",
     "uglify-js": "^3.17.4"
   },
