--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "expo-system-ui": "~4.0.5",
     "expo-web-browser": "~14.0.1",
     "fix": "^0.0.3",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
@@ -51,7 +53,8 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "react-router-native": "^6.28.0",
-    "uglify-js": "^3.17.4"
+    "uglify-js": "^3.17.4",
+    "expo-file-system": "~18.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
